--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - .:/app
     depends_on:
       - celery
+      - redis
     environment:
       - DJANGO_SETTINGS_MODULE=myshop.settings
   celery:
