--- a/shop/.pylintrc
+++ b/shop/.pylintrc
@@ -438,7 +438,8 @@ disable=raw-checker-failed,
         use-implicit-booleaness-not-comparison-to-zero,
 				too-few-public-methods,
 				no-member,
-				unused-argument
+				unused-argument,
+				invalid-name
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
